2004-05-26  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/slurm.c (_slurm_wcoll) : Add extra "show_all"
	argument needed for slurm_load_jobs().

2004-05-12  Mark Grondona <mgrondona@llnl.gov>
	
	* src/pdsh/dsh.c (_rcp_thread) : Generate error message and copy
	any pending stderr data to user when _rcp_response() fails.
	(gnats:433)

2004-05-12  Albert Chu <chu11@llnl.gov>

	* doc/pdcp.1.in: Added note that pdcp must be installed on remote
	destination nodes.
	
2004-05-06  Mark Grondona <mgrondona@llnl.gov>

	* src/qsnet/elanhosts.c, src/qsnet/elanhosts.h, src/qsnet/Makefile.am :
	Removed elanhosts.[ch] (functionality moved into libelanhosts library).

	* config/ac_elan.m4 : Check for presence of libelanhosts.

2004-04-27  Mark Grondona <mgrondona@llnl.gov>

	* src/qsnet/qshell.c (get_qshell_info) : Increase max environment
	string from 1k to 4k.

2004-04-26  Mark Grondona <mgrondona@llnl.gov>

	* src/qsnet/qswutil.c : Add missing variable in #ifdef HAVE_LIBELAN3

	* src/qsnet/qshell.c : Add missing newlines to error messages.

	* src/pdsh/opt.h, src/pdsh/opt.c : Added and initialized ret_remote_rc.

	* src/pdsh/dsh.c (dsh) : Initialize opt->getstat if either of
	ret_remote_rc or kill_on_fail are true, but only adjust exit value
	of pdsh process when ret_remote_rc is true.

	* src/pdsh/dsh.c (_rsh_thread) : Kill all processes if remote
	process is killed by a signal and opt->kill_on_fail is true.

	* src/pdsh/dsh.c (_die_if_signalled) : Added.

2004-04-08  Mark Grondona <mgrondona@llnl.gov>

	* src/qsnet/qswutil.c (_qsw_cap_create, _qsw_elan_nrails) : Added.

	* src/qsnet/qswutil.c (qsw_setup_program) : Further refinement
	of Elan multirail support.

2004-04-07  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/dsh.c (_fwd_signal) : Check for valid file descriptor
	before passing to mod_rcmd_signal().

	* src/pdsh/dsh.c (_rsh_thread) : Block SIGPIPE outside while loop
	and before call to connect.

	* src/pdsh/opt.c (opt_args) : Pass PCP only arguments to modules