@@ -3,6 +3,9 @@
 	* src/modules/slurm.c (_slurm_wcoll) : Add extra "show_all"
 	argument needed for slurm_load_jobs().
 
+	* config/ac_elan.m4 : Fix typos. Abort configure if libelanhosts 
+	not found.  
+
 2004-05-12  Mark Grondona <mgrondona@llnl.gov>
 	
 	* src/pdsh/dsh.c (_rcp_thread) : Generate error message and copy
